<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/my_num"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/mytitle"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/myEditText"
        android:layout_width="match_parent"
        android:layout_height="227dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:hint="@string/myhead"
        android:padding="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/mySave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mysave" />

        <Button
            android:id="@+id/myEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myedit" />

        <Button
            android:id="@+id/myClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myclose" />

    </LinearLayout>
</LinearLayout>