<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#ABEBC6">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <ListView
            android:id="@+id/listView1"
            android:layout_width="142dp"
            android:layout_height="184dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:layout_marginStart="13dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="109dp"
            android:layout_height="33dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/local"
            android:textSize="14sp" />

        <TextView
            android:layout_width="108dp"
            android:layout_height="33dp"
            android:layout_above="@+id/listView1"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="43dp"
            android:text="@string/national"
            android:textSize="14sp" />

        <ListView
            android:id="@+id/listView2"
            android:layout_width="138dp"
            android:layout_height="184dp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/listView1"
            android:layout_marginEnd="22dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="109dp"
            android:layout_height="33dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/sports1"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="108dp"
            android:layout_height="33dp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/textView3"
            android:layout_marginEnd="43dp"
            android:text="@string/sports2"
            android:textSize="14sp" />

        <ListView
            android:id="@+id/listView3"
            android:layout_width="141dp"
            android:layout_height="184dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView3"
            android:layout_marginStart="20dp" />

        <ListView
            android:id="@+id/listView4"
            android:layout_width="140dp"
            android:layout_height="184dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/textView4"
            android:layout_marginEnd="22dp" />
    </RelativeLayout>
</RelativeLayout>
